RESOLVED FIXED160113
Web Automation: WebAutomationSession::deleteAllCookies never calls callback, hangs automation session
https://bugs.webkit.org/show_bug.cgi?id=160113
Summary Web Automation: WebAutomationSession::deleteAllCookies never calls callback, ...
Joseph Pecoraro
Reported 2016-07-22 21:35:00 PDT
WebAutomationSession::deleteAllCookies never calls callback, hangs automation session
Attachments
[PATCH] Proposed Fix (3.52 KB, patch)
2016-07-22 21:36 PDT, Joseph Pecoraro
darin: review+
Joseph Pecoraro
Comment 1 2016-07-22 21:35:05 PDT
Joseph Pecoraro
Comment 2 2016-07-22 21:36:30 PDT
Created attachment 284398 [details] [PATCH] Proposed Fix
Blaze Burg
Comment 3 2016-07-22 22:55:04 PDT
Comment on attachment 284398 [details] [PATCH] Proposed Fix View in context: https://bugs.webkit.org/attachment.cgi?id=284398&action=review > Source/WebKit2/ChangeLog:11 > + async alltogether and implicitly complete the action. Nit: 'altogether'
Joseph Pecoraro
Comment 4 2016-07-22 23:16:43 PDT
Note You need to log in before you can comment on or make changes to this bug.