Web Automation: WebAutomationSession::deleteAllCookies never calls callback, hangs automation session https://bugs.webkit.org/show_bug.cgi?id=160113 <rdar://problem/27308124>

Reviewed by Darin Adler.

Delete all cookies appears to be a straightforward action
where we don't need to wait for a callback. So drop the
async altogether and implicitly complete the action.

* UIProcess/Automation/Automation.json:
* UIProcess/Automation/WebAutomationSession.cpp:
(WebKit::WebAutomationSession::deleteAllCookies):
* UIProcess/Automation/WebAutomationSession.h:

Canonical link: https://commits.webkit.org/178265@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@203634 268f45cc-cd09-0410-ab3c-d52691b4dbfc